fixed element alignment issues in responsive view to a certain degree

--- a/styles/profile_page.css
+++ b/styles/profile_page.css
@@ -501,10 +501,18 @@ body {
 
 @media (max-width: 1200px) {
     .profile_section_outer {
-        height: 225vh;
+        height: 220vh;
     }
     .skills_list li {
         font-size:1.21vw;
+    }
+}
+@media (max-width: 1100px) {
+    .profile_section_outer {
+        height: 210vh;
+    }
+    .skills_list li {
+        font-size:1.27vw;
     }
 }
 @media (max-width: 1000px) {
@@ -515,19 +523,42 @@ body {
         font-size:1.27vw;
     }
 }
-@media (max-width: 800px) {
+@media (max-width: 900px) {
     .profile_section_outer {
-        height: 150vh;
+        height: 190vh;
     }
     .skills_list li {
-        font-size:1.23vw;
+        font-size:1.33vw;
+    }
+}
+@media (max-width: 900px) {
+    .profile_section_outer {
+        height: 180vh;
+    }
+    .skills_list li {
+        font-size:1.33vw;
+    }
+}
+@media (max-width: 800px) {
+    .profile_section_outer {
+        height: 170vh;
+    }
+    .skills_list li {
+        font-size:1.33vw;
+    }
+}
+@media (max-width: 700px) {
+    .profile_section_outer {
+        height: 160vh;
+    }
+    .skills_list li {
+        font-size:1.35vw;
     }
 }
 
-
 @media (max-width: 600px) {
     .profile_section_outer {
-        height: 280vh;
+        height: 330vh;
     }
     .profile_section_inner_top {
         grid-template-columns: 1fr;
@@ -752,15 +783,48 @@ body {
         top: 350%;
     }
 }
+@media (max-width: 588px) {
+    .profile_section_outer {
+        /* height: 310vh; */
+    }
 
+    .display_picture {
+        top: 4%;
+        left: 7%;
+    }
+    .user_full_anem {
+        top: 8.3%;
+        left: 40%;
+    }
+    .user_profession{
+        top: 10.5%;
+        left: 42%;
+    }
+    .linkedin_icon{
+        top: 8.5%;
+        left: 78%;
+    }
+    .email_icon{
+        top: 10.7%;
+        left: 78%;
+    }
+    .twitter_icon{
+        top: 12.9%;
+        left: 78%;
+    }
+    .download_resume_button {
+        top:12.6%;
+        left: 13.5%;
+    }
+}
 @media (max-width: 550px){
     .profile_section_outer {
-        height: 250vh;
+        height: 310vh;
     }
     .display_picture {
         width:30vw;
         height:30vw;
-        top: 4%;
+        top: 3.7%;
         left: 7%;
     }
     .user_full_anem {
@@ -791,38 +855,48 @@ body {
         left: 78%;
         /* font-size: 3.5vw; */
     }
+    .download_resume_button {
+        top:12.6%;
+        left: 13.5%;
+    }
     
 }
 
 @media (max-width: 500px) {
     .profile_section_outer {
-        height: 220vh;
+        height: 290vh;
+    }
+    .display_picture {
+        width:30vw;
+        height:30vw;
+        top: 4.5%;
+        left: 7%;
     }
 }
 
 @media (max-width:450px) {
     .profile_section_outer {
-        height: 200vh;
+        height: 250vh;
     }
 }
 
 @media (max-width:400px) {
     .profile_section_outer {
-        height: 190vh;
+        height: 210vh;
     }
 }
 @media (max-width:375px) {
     .profile_section_outer {
-        height: 175vh;
+        height: 190vh;
     }
 }
 @media (max-width:325px) {
     .profile_section_outer {
-        height: 155vh;
+        height: 175vh;
     }
 }
 @media (max-width:300px) {
     .profile_section_outer {
-        height: 145vh;
+        height: 150vh;
     }
 }
